[package]
name = "two_mub_coefficients"
version = "0.1.0"
authors = ["Max Tyler <maxastyler@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "two_mub_coefficients"
crate-type = ["cdylib", "rlib"]

[features]
default = [ "pyo3" ]

[build]
rustflags = ["-C", "link-arg=-undefined", "-C", "link-arg=dynamic_lookup"]

[dependencies]
num = "0.2"
ndarray = { version = "0.13", features = ["rayon"] }
numpy = "0.7"
itertools = "0.8"

[dependencies.pyo3]
version = "0.8"
features = ["extension-module"]
optional = true